# ScanXUI

./: 1.json  Cargo.toml  GOODTHINGS  SB.go  azure_aa  azure_ab  azure_ac  azure_ad  azure_ae  azure_af  azure_ag  checkhttp.go  ip.txt  ipranges.txt  ips.txt  ips_new.txt  isfuckxui copy.py  isfuckxui.py  last.py  main.py  mass.sh  nb.txt  paused.conf  res.txt  result.txt  results.txt  results1.txt  results2.txt  results3.txt  results4.txt  scan.sh  sh.sh
src/: main.rs
xui_scanner_rust/: Cargo.toml  Cargo.toml.bak  azure  output
xui_scanner_rust/src/: main.bak.rs  main.bak.rs.2  main.bak.rs.3  main.rs
